Fix text alignment and color

--- a/css/main.css
+++ b/css/main.css
@@ -5,6 +5,7 @@ html {
   background-color: #eee9de;
   display: inline-block;
   text-align: center;
+  color: #000;
 }
 
 *, *::before, *::after {
@@ -12,25 +13,19 @@ html {
 }
 
 img {
-  padding: 2em 1em;
-  display: inline-block;
   text-align: center;
   max-width: 25em;
-  width: inherit;
-}
-
-main {
-  color: #333;
+  display: block;
+  width: 100%;
 }
 
 h2 {
-  margin-bottom: 1.5rem;
-  margin-top: 0;
+  font-weight: bold;
+  margin: 0;
 }
 
 body {
   margin: 0;
-
 }
 
 div {
@@ -41,8 +36,9 @@ div {
 }
 
 section {
-  text-align: left;
+  text-align: center;
   display: inline-block;
+  padding: 2em 0;
 }
 
 a:hover {
@@ -57,10 +53,25 @@ a {
   color: #333;
 }
 
+p {
+  margin-bottom: 1.5em;
+  margin-top: 1.5em;
+}
+
 .btn {
   background-color: #eee9de;
-  padding: 1em;
-  border-radius: 1em;
+  padding: .5em;
+  border-radius: .5em;
   max-width: inherit;
-  border: 2px solid #666;
+  border: 3px solid #000;
+  font-size: 1.2rem;
+}
+
+.paragraph {
+  padding: 1em;
+  text-align: left;
+}
+
+.image {
+  padding: 1em;
 }
